@@ -1,8 +1,11 @@
 package com.msmk.linkedin.configuration;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
+import java.util.Set;
 
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
@@ -13,44 +16,188 @@ import com.msmk.linkedin.features.authentication.repository.AuthenticationUserRe
 import com.msmk.linkedin.features.authentication.utils.Encoder;
 import com.msmk.linkedin.features.feed.model.Post;
 import com.msmk.linkedin.features.feed.repository.PostRepository;
+import com.msmk.linkedin.features.networking.model.Connection;
+import com.msmk.linkedin.features.networking.model.Status;
+import com.msmk.linkedin.features.networking.repository.ConnectionRepository;
 
 @Configuration
 public class LoadDatabaseConfiguration {
-
-    
+    private static final int NUM_USERS = 500;
+    private static final int MIN_POSTS_PER_USER = 1;
+    private static final int MAX_POSTS_PER_USER = 3;
+    private static final int MIN_CONNECTIONS_PER_USER = 0;
+    private static final int MAX_CONNECTIONS_PER_USER = 3;
     private final Encoder encoder;
-    
+    private final Random random = new Random();
+
     public LoadDatabaseConfiguration(Encoder encoder) {
         this.encoder = encoder;
     }
 
     @Bean
-    public CommandLineRunner initDatabase(AuthenticationUserRepository userRepository, PostRepository postRepository) {
+    public CommandLineRunner initDatabase(AuthenticationUserRepository userRepository, PostRepository postRepository, ConnectionRepository connectionRepository) {
         return args -> {
             List<AuthenticationUser> users = createUsers(userRepository);
+            createConnections(connectionRepository, users);
             createPosts(postRepository, users);
         };
     }
 
-    private List<AuthenticationUser> createUsers(AuthenticationUserRepository authenticationUserRepository) {
-        List<AuthenticationUser> users = List.of(
-                createUser("john.doe@example.com", "john", "John", "Doe", "Software Engineer", "Docker Inc.", "San Francisco, CA",
-                        "https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=3560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
-                createUser("anne.claire@example.com", "anne", "Anne", "Claire", "HR Manager", "eToro", "Paris, Fr",
-                        "https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=3687&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
-                createUser("arnauld.manner@example.com", "arnauld", "Arnauld", "Manner", "Product Manager", "Arc", "Dakar, SN",
-                        "https://images.unsplash.com/photo-1640960543409-dbe56ccc30e2?q=80&w=2725&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
-                createUser("moussa.diop@example.com", "moussa", "Moussa", "Diop", "Software Engineer", "Orange", "Bordeaux, FR",
-                        "https://images.unsplash.com/photo-1586297135537-94bc9ba060aa?q=80&w=3560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"),
-                createUser("awa.diop@example.com", "awa", "Awa", "Diop", "Data Scientist", "Zoho", "New Delhi, IN",
-                        "https://images.unsplash.com/photo-1640951613773-54706e06851d?q=80&w=2967&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+    private List<AuthenticationUser> createUsers(AuthenticationUserRepository userRepository) {
+        List<String> firstNames = Arrays.asList("John", "Jane", "Michael", "Emily", "David", "Sarah", "James", "Emma",
+                "William", "Olivia", "Liam", "Ava", "Noah", "Isabella", "Ethan", "Sophia", "Mason", "Mia", "Lucas", "Charlotte",
+                "Alexander", "Amelia", "Daniel", "Harper", "Joseph", "Evelyn", "Samuel", "Abigail", "Henry", "Elizabeth",
+                "Sebastian", "Sofia", "Jack", "Avery", "Owen", "Ella", "Gabriel", "Madison", "Matthew", "Scarlett",
+                "Moussa", "Fatou", "Amadou", "Aisha", "Omar", "Aminata", "Ibrahim", "Mariam", "Abdul", "Zainab",
+                "Wei", "Xia", "Ming", "Lin", "Hui", "Yan", "Jie", "Ying", "Feng", "Hong",
+                "Mohammed", "Fatima", "Ahmed", "Aisha", "Ali", "Zainab", "Hassan", "Mariam", "Hussein", "Amira");
+
+        List<String> lastNames = Arrays.asList("Smith", "Johnson", "Williams", "Brown", "Jones", "Garcia", "Miller",
+                "Davis", "Rodriguez", "Martinez", "Hernandez", "Lopez", "Gonzalez", "Wilson", "Anderson", "Thomas",
+                "Taylor", "Moore", "Jackson", "Martin", "Lee", "Perez", "Thompson", "White", "Harris", "Sanchez",
+                "Clark", "Ramirez", "Lewis", "Robinson", "Walker", "Young", "Allen", "King", "Wright", "Scott",
+                "Diop", "Sow", "Fall", "Ndiaye", "Diallo", "Ba", "Sy", "Wade", "Gueye", "Mbaye",
+                "Wang", "Li", "Zhang", "Liu", "Chen", "Yang", "Huang", "Zhou", "Wu", "Xu",
+                "Al-Sayed", "Khan", "Ahmed", "Hassan", "Ali", "Ibrahim", "Rahman", "Sheikh", "Malik", "Qureshi");
+
+        List<String> companies = Arrays.asList("Google", "Microsoft", "Apple", "Amazon", "Meta", "Netflix", "Tesla",
+                "Adobe", "Twitter", "LinkedIn", "Spotify", "Uber", "Airbnb", "Salesforce", "Oracle", "IBM", "Intel",
+                "Samsung", "Sony", "Docker", "Zoom", "Slack", "GitHub", "GitLab", "Redis", "MongoDB", "Orange",
+                "Thales", "Capgemini", "Botify", "Bwat", "EDF", "Algolia", "Zoho", "Shopopop", "Société Générale", "BnpParibas", "Nexitis");
+
+        List<String> positions = Arrays.asList("Software Engineer", "Data Scientist", "Product Manager",
+                "DevOps Engineer", "HR Manager", "Full Stack Developer", "Frontend Developer", "Backend Developer",
+                "Machine Learning Engineer", "Cloud Architect", "System Administrator", "Database Administrator",
+                "Security Engineer", "QA Engineer", "Technical Lead", "Engineering Manager", "CTO", "VP of Engineering",
+                "Solutions Architect", "Technical Project Manager");
+
+        List<String> locations = Arrays.asList(
+                "San Francisco, US", "New York, US", "Seattle, US", "Boston, US", "Austin, US",
+                "London, UK", "Berlin, DE", "Paris, FR", "Amsterdam, NL", "Stockholm, SE",
+                "Tokyo, JP", "Singapore, SG", "Sydney, AU", "Toronto, CA", "Vancouver, CA",
+                "Dubai, AE", "Dakar, SN", "Bangalore, IN", "Seoul, KR", "Cape Town, ZA",
+                "Mumbai, IN", "Shanghai, CN", "São Paulo, BR", "Mexico City, MX", "Dublin, IE");
+
+        List<String> profilePictures = Arrays.asList(
+                "https://images.unsplash.com/photo-1494790108377-be9c29b29330",
+                "https://images.unsplash.com/photo-1586297135537-94bc9ba060aa",
+                "https://images.unsplash.com/photo-1640951613773-54706e06851d",
+                "https://images.unsplash.com/photo-1535713875002-d1d0cf377fde",
+                "https://images.unsplash.com/photo-1527980965255-d3b416303d12",
+                "https://images.unsplash.com/photo-1438761681033-6461ffad8d80",
+                "https://images.unsplash.com/photo-1630208232589-e42b29428b19",
+                "https://images.unsplash.com/photo-1619895862022-09114b41f16f"
         );
-        authenticationUserRepository.saveAll(users);
-        return users;
+
+        List<AuthenticationUser> users = new ArrayList<>();
+        for (int i = 0; i < NUM_USERS; i++) {
+            String firstName = firstNames.get(random.nextInt(firstNames.size()));
+            String lastName = lastNames.get(random.nextInt(lastNames.size()));
+            String email = firstName.toLowerCase() + "." + lastName.toLowerCase() + i + "@example.com";
+            String position = positions.get(random.nextInt(positions.size()));
+            String company = companies.get(random.nextInt(companies.size()));
+            String location = locations.get(random.nextInt(locations.size()));
+            String profilePicture = i < profilePictures.size() ? profilePictures.get(i) : null;
+
+            users.add(createUser(email, lastName, firstName, lastName, position, company, location, profilePicture));
+        }
+
+        users.addAll(List.of(
+                createUser("john.doe@example.com", "john", "John", "Doe", positions.get(random.nextInt(positions.size())), companies.get(random.nextInt(companies.size())), locations.get(random.nextInt(locations.size())),
+                        "https://images.unsplash.com/photo-1633332755192-727a05c4013d"),
+                createUser("anne.claire@example.com", "anne", "Anne", "Claire", positions.get(random.nextInt(positions.size())), companies.get(random.nextInt(companies.size())), locations.get(random.nextInt(locations.size())),
+                        "https://images.unsplash.com/photo-1494790108377-be9c29b29330"),
+                createUser("arnauld.manner@example.com", "arnauld", "Arnauld", "Manner", positions.get(random.nextInt(positions.size())), companies.get(random.nextInt(companies.size())),
+                        locations.get(random.nextInt(locations.size())),
+                        "https://images.unsplash.com/photo-1640960543409-dbe56ccc30e2")
+        ));
+
+        return userRepository.saveAll(users);
     }
-    private AuthenticationUser createUser(String email, String password, String firstName, String lastName, String position,
-                                          String company, String location, String profilePicture) {
-        AuthenticationUser user = new AuthenticationUser(email, encoder.encode(password));
+
+    private void createConnections(ConnectionRepository connectionRepository, List<AuthenticationUser> users) {
+        for (AuthenticationUser user : users) {
+            int numConnections = random.nextInt(MAX_CONNECTIONS_PER_USER - MIN_CONNECTIONS_PER_USER + 1) + MIN_CONNECTIONS_PER_USER;
+            Set<AuthenticationUser> userConnections = new HashSet<>();
+
+            while (userConnections.size() < numConnections) {
+                AuthenticationUser recipient = users.get(random.nextInt(users.size()));
+                if (!recipient.equals(user) && !userConnections.contains(recipient)) {
+                    userConnections.add(recipient);
+                    Connection connection = new Connection(user, recipient);
+                    connection.setStatus(Status.ACCEPTED);
+                    connectionRepository.save(connection);
+                }
+            }
+        }
+    }
+
+    private void createPosts(PostRepository postRepository, List<AuthenticationUser> users) {
+        List<String> postTemplates = Arrays.asList(
+                "Excited to share that %s just launched a new feature!",
+                "Great discussion about %s at today's team meeting.",
+                "Looking forward to the upcoming %s conference!",
+                "Just completed a certification in %s. Always learning!",
+                "Proud to announce that our team at %s achieved a major milestone.",
+                "Interesting article about the future of %s in tech.",
+                "Sharing my thoughts on the latest developments in %s.",
+                "Amazing workshop on %s today!",
+                "Big announcement: We're hiring %s experts at %s!",
+                "Reflecting on my journey as a %s at %s.",
+                "Here's what I learned about %s this week.",
+                "Exciting times ahead for %s technology!",
+                "Just published an article about %s best practices.",
+                "Grateful for the amazing %s team at %s.",
+                "Innovation in %s is moving faster than ever!"
+        );
+
+        List<String> topics = Arrays.asList("AI", "Machine Learning", "Cloud Computing", "DevOps", "Blockchain",
+                "Cybersecurity", "Data Science", "IoT", "5G", "Quantum Computing", "AR/VR", "Digital Transformation",
+                "Agile Development", "Remote Work", "Tech Leadership");
+
+        List<String> postImages = Arrays.asList(
+                "https://images.unsplash.com/photo-1731176497854-f9ea4dd52eb6",
+                "https://images.unsplash.com/photo-1504384764586-bb4cdc1707b0",
+                "https://images.unsplash.com/photo-1553877522-43269d4ea984",
+                "https://images.unsplash.com/photo-1531297484001-80022131f5a1"
+        );
+
+        for (AuthenticationUser user : users) {
+            int numPosts = random.nextInt(MAX_POSTS_PER_USER - MIN_POSTS_PER_USER + 1) + MIN_POSTS_PER_USER;
+
+            for (int i = 0; i < numPosts; i++) {
+                String template = postTemplates.get(random.nextInt(postTemplates.size()));
+                String topic = topics.get(random.nextInt(topics.size()));
+                String content = String.format(template, topic, user.getCompany());
+
+                Post post = new Post(content, user);
+                post.setLikes(generateLikes(users, random));
+
+                // Add an image to ~20% of posts
+                if (random.nextInt(5) == 0) {
+                    post.setPicture(postImages.get(random.nextInt(postImages.size())));
+                }
+
+                postRepository.save(post);
+            }
+        }
+    }
+
+    private HashSet<AuthenticationUser> generateLikes(List<AuthenticationUser> users, Random random) {
+        HashSet<AuthenticationUser> likes = new HashSet<>();
+        int maxLikes = Math.min(50, users.size() / 10); // Maximum 50 likes or 10% of users
+        int likesCount = random.nextInt(maxLikes);
+
+        while (likes.size() < likesCount) {
+            likes.add(users.get(random.nextInt(users.size())));
+        }
+
+        return likes;
+    }
+
+    private AuthenticationUser createUser(String email, String password, String firstName, String lastName,
+                            String position, String company, String location, String profilePicture) {
+                                AuthenticationUser user = new AuthenticationUser(email, encoder.encode(password));
         user.setEmailVerified(true);
         user.setFirstName(firstName);
         user.setLastName(lastName);
@@ -58,37 +205,15 @@ public class LoadDatabaseConfiguration {
         user.setCompany(company);
         user.setLocation(location);
         user.setProfilePicture(profilePicture);
+        user.setAbout("I'm a passionate " + position + " at " + company + " with expertise in " +
+                generateRandomExpertise() + ". Based in " + location + ".");
         return user;
     }
-    private void createPosts(PostRepository postRepository, List<AuthenticationUser> users) {
-        Random random = new Random();
-        for (int j = 1; j <= 10; j++) {
-            Post post = new Post("Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-                    users.get(random.nextInt(users.size())));
-            post.setLikes(generateLikes(users, j, random));
-            if (j == 1) {
-                post.setPicture("https://images.unsplash.com/photo-1731176497854-f9ea4dd52eb6?q=80&w=3432&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-            }
-            postRepository.save(post);
-        }
-    }
-    private HashSet<AuthenticationUser> generateLikes(List<AuthenticationUser> users, int postNumber, Random random) {
-        HashSet<AuthenticationUser> likes = new HashSet<>();
-        if (postNumber == 1) {
-            while (likes.size() < 3) {
-                likes.add(users.get(random.nextInt(users.size())));
-            }
-        } else {
-            int likesCount = switch (postNumber % 5) {
-                case 0 -> 3;
-                case 2, 3 -> 2;
-                default -> 1;
-            };
-            for (int i = 0; i < likesCount; i++) {
-                likes.add(users.get(random.nextInt(users.size())));
-            }
-        }
-        return likes;
-    }
 
+    private String generateRandomExpertise() {
+        List<String> skills = Arrays.asList("cloud architecture", "distributed systems", "machine learning",
+                "data analytics", "mobile development", "web development", "DevOps", "cybersecurity",
+                "UI/UX design", "artificial intelligence", "blockchain", "IoT");
+        return skills.get(random.nextInt(skills.size()));
+    }
 }
